# serialport

./: .gitignore  CMakeLists.txt  port.py
include/: common.h  crc.hpp  serialport.h  serialport_driver.hpp
src/: main.cpp  serialport.cpp
